WEB-543: Camera view fixes - cameras list
scrollbar fix

<==== Mercurial data ====>
Branch: vms_3.1_web

--- a/webadmin/app/web_common/styles/_webclient.scss
+++ b/webadmin/app/web_common/styles/_webclient.scss
@@ -15,11 +15,6 @@
   background: $light8;
 }
 
-::-webkit-scrollbar-track:hover
-{
-  background: $light9;
-}
-
 ::-webkit-scrollbar-thumb:hover
 {
   background: $light9;
